--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -13,7 +13,8 @@
     <li><%= link_to 'Notification Center', settings_notifications_path, :rel => "nofollow" %></li>
     <li><%= link_to 'Privacy'            , settings_privacy_path , :rel => "nofollow" %></li>
     <li><%= link_to 'API Key'            , settings_api_path     , :rel => "nofollow" %></li>
-    <li><%= link_to 'License Whitelists' , settings_license_whitelists_path, :rel => "nofollow" %></li>
+    <li><%= link_to 'License Whitelists'  , settings_license_whitelists_path,   :rel => "nofollow" %></li>
+    <li><%= link_to 'Component Whitelists', settings_component_whitelists_path, :rel => "nofollow" %></li>
     <li><%= link_to 'users'              , users_path, :rel => "nofollow" %></li>
     <hr/>
     <li><%= link_to 'Maven Repository'   , settings_mvnrepos_path , :rel => "nofollow" %></li>
@@ -37,8 +38,9 @@
     <% end %>
 
     <% if !Rails.env.enterprise? || current_user.fetch_or_create_permissions.lwl == true %>
-      <li><%= link_to 'License Whitelists' , settings_license_whitelists_path, :rel => "nofollow" %></li>
-    <% end %> 
+      <li><%= link_to 'License Whitelists'  , settings_license_whitelists_path,   :rel => "nofollow" %></li>
+      <li><%= link_to 'Component Whitelists', settings_component_whitelists_path, :rel => "nofollow" %></li>
+    <% end %>
 
     <li><%= link_to 'Connect'            , settings_connect_path , :rel => "nofollow" %></li>
     <li><%= link_to 'Password'           , settings_password_path, :rel => "nofollow" %></li>
