--- a/app/views/user/projects/helpers/_license_whitelist_picker.html.erb
+++ b/app/views/user/projects/helpers/_license_whitelist_picker.html.erb
@@ -3,8 +3,8 @@
   <form action="<%= save_whitelist_user_project_path(@project) %>" method="post" class="form-inline" >
     <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
     <div>
-      Choose a License Whitelist we should check against your dependencies.
-      If a dependency has a license which is not on your Whitelist we will mark it red and send you notifications.
+      Choose a License Whitelist which should be checked against your dependencies.
+      If a dependency has a license which is not on the selecte license whitelist, the dependency will be marked red.
     </div>
     <div class="form-group">
       <select name="whitelist" class="form-control" >
@@ -12,12 +12,12 @@
         <% @whitelists.each do |list| %>
           <option value="<%= list.name %>" <%= @project.license_whitelist.to_s.eql?(list.name) ? 'selected' : '' %> ><%= list.name %></option>
         <% end %>
-      </select> 
+      </select>
     </div>
-    <button type="submit" class="btn btn-primary" >Save</button> 
+    <button type="submit" class="btn btn-primary" >Save</button>
     <% if !Rails.env.enterprise? %>
-      <button type="button" onclick="window.location.href='/settings/license_whitelists'" class="btn btn-success" >Manage Whitelists</button>
-    <% end %> 
+      <button type="button" onclick="window.location.href='/settings/license_whitelists'" class="btn btn-success" >Manage License Whitelists</button>
+    <% end %>
   </form>
   <br/>
 <% end %>
