--- a/app/views/shared/_new_url_form.html.erb
+++ b/app/views/shared/_new_url_form.html.erb
@@ -33,14 +33,8 @@
 
   <div style = "padding: 15px 30px;">
     <p>
-      To submit a new Resource you have to login.
+      To submit a new Resource you have to <a href="/signup">login</a>.
     </p>
-  </div>
-
-  <%= render "shared/login_options_horizontal" %>
-
-  <div style = "padding: 15px 30px;">
-    Or <a href="/signup">sign up</a> with your <a href="/signup">email address</a>.
   </div>
 
 <% end %>
