--- a/app/assets/stylesheets/product.scss
+++ b/app/assets/stylesheets/product.scss
@@ -150,6 +150,15 @@ h3.side_header{
   }
 }
 
+@media(max-width:410px) {
+  .notifyme {
+    height: 50px;
+    width: 100%;
+    font-size: 16px;
+    font-weight: bold;
+  }
+}
+
 .keyword_tag{
   font-size: 12px;
   background-color: #eef0f1;
