More optimisation for mobile.

--- a/app/assets/stylesheets/landing_page.scss
+++ b/app/assets/stylesheets/landing_page.scss
@@ -95,6 +95,11 @@ h6 {
         width: 350px;
     }
 }
+@media(max-width:400px) {
+    .chart-outdated{
+        width: 300px;
+    }
+}
 
 .network-name {
     text-transform: uppercase;
