--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,6 +1,5 @@
 
 .navbar {
-
   .logo_small{
     margin-top: 2px;
     margin-left: 5px;
@@ -11,20 +10,11 @@
     width: 32px;
     height: 25px;
   }
-
 }
-
-.navbar .nav > li {
-  float: left;
-  padding: 5px 0px 0px 15px;
-}
-
 
 .navbar .nav > li > a {
-  color: black;
   font-size: 14px;
   font-weight: bold;
-  padding: 10px 0px 0px 0px;
 }
 
 .navbar .nav > li > a.profile_pic_tiny {
@@ -35,10 +25,40 @@
   color: #0088cc;
 }
 
-.navbar-fixed-top {
-  border-top: 0;
-  border-left: 0;
-  border-right: 0;
-  background-color: white;
-  border-bottom: 1px solid #eeeeee;
+
+@media (max-width: 992px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
 }
