--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -38,7 +38,6 @@ section > ul li {
 /* Used on package detail pages .. width: 615px; */
 div.content {
   padding: 30px 0px 30px 30px;
-  border-left: 1px solid #ddd;
   border-top: 1px solid #ddd;
 }
 
@@ -58,7 +57,7 @@ div.content_no_head {
   padding-left: 30px;
   padding-bottom: 15px;
   padding-top: 15px;
-  border-left: 1px solid #DDD;
+  font-weight: bold;
 }
 
 /* -----------------------
