--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -1,53 +1,69 @@
 <% content_for :title, 'Settings' %>
 
-<ul class = "nav nav-pills nav-stacked">
+<div class="navbar navbar-default" >
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#settings_menu" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
 
-  <% if signed_in_admin? %>
-    <li><%= link_to 'Activation'         , settings_activation_path    , :rel => "nofollow" %></li>
-    <li><%= link_to 'Profile'            , settings_profile_path       , :rel => "nofollow" %></li>
-    <li><%= link_to 'Global Settings'    , settings_globalsettings_path, :rel => "nofollow" %></li>
-    <li><%= link_to 'SMTP Settings'      , settings_emailsettings_path , :rel => "nofollow" %></li>
-    <li><%= link_to 'Email Addresses'    , settings_emails_path        , :rel => "nofollow" %></li>
-    <li><%= link_to 'Connect'            , settings_connect_path , :rel => "nofollow" %></li>
-    <li><%= link_to 'Password'           , settings_password_path      , :rel => "nofollow" %></li>
-    <li><%= link_to 'Notification Center', settings_notifications_path, :rel => "nofollow" %></li>
-    <li><%= link_to 'Privacy'            , settings_privacy_path , :rel => "nofollow" %></li>
-    <li><%= link_to 'API Key'            , settings_api_path     , :rel => "nofollow" %></li>
-    <li><%= link_to 'License Whitelists'  , settings_license_whitelists_path,   :rel => "nofollow" %></li>
-    <li><%= link_to 'Component Whitelists', settings_component_whitelists_path, :rel => "nofollow" %></li>
-    <li><%= link_to 'users'              , users_path, :rel => "nofollow" %></li>
-    <hr/>
-    <li><%= link_to 'Maven Repository'   , settings_mvnrepos_path , :rel => "nofollow" %></li>
-    <li><%= link_to 'Satis Repository'   , settings_satis_path    , :rel => "nofollow" %></li>
-    <li><%= link_to 'CocoaPods Specs'    , settings_cocoapods_path, :rel => "nofollow" %></li>
-    <hr/>
-    <li><%= link_to 'GitHub Settings'    , settings_githubsettings_path   , :rel => "nofollow" %></li>
-    <li><%= link_to 'Bitbucket Settings' , settings_bitbucketsettings_path, :rel => "nofollow" %></li>
-    <li><%= link_to 'Stash Settings'     , settings_stashsettings_path    , :rel => "nofollow" %></li>
-    <hr/>
-    <li><%= link_to 'Scheduler'          , settings_scheduler_path, :rel => "nofollow" %></li>
-  <% else %>
-    <li><%= link_to 'Profile'            , settings_profile_path, :rel => "nofollow" %></li>
-    <li><%= link_to 'Links'              , settings_links_path  , :rel => "nofollow" %></li>
-    <li><%= link_to 'E-Mails'            , settings_emails_path , :rel => "nofollow" %></li>
+    <div class="collapse navbar-collapse" id="settings_menu">
 
-    <% if !Rails.env.enterprise? %>
-      <li><%= link_to 'Plans & Pricing'    , settings_plans_path   , :rel => "nofollow" %></li>
-      <li><%= link_to 'Payment History'    , settings_payments_path, :rel => "nofollow" %></li>
-      <li><%= link_to 'Billing Address'    , settings_billing_path , :rel => "nofollow" %></li>
-    <% end %>
+        <ul class = "nav nav-pills nav-stacked">
 
-    <% if !Rails.env.enterprise? || current_user.fetch_or_create_permissions.lwl == true %>
-      <li><%= link_to 'License Whitelists'  , settings_license_whitelists_path,   :rel => "nofollow" %></li>
-      <li><%= link_to 'Component Whitelists', settings_component_whitelists_path, :rel => "nofollow" %></li>
-    <% end %>
+          <% if signed_in_admin? %>
+            <li><%= link_to 'Activation'         , settings_activation_path    , :rel => "nofollow" %></li>
+            <li><%= link_to 'Profile'            , settings_profile_path       , :rel => "nofollow" %></li>
+            <li><%= link_to 'Global Settings'    , settings_globalsettings_path, :rel => "nofollow" %></li>
+            <li><%= link_to 'SMTP Settings'      , settings_emailsettings_path , :rel => "nofollow" %></li>
+            <li><%= link_to 'Email Addresses'    , settings_emails_path        , :rel => "nofollow" %></li>
+            <li><%= link_to 'Connect'            , settings_connect_path , :rel => "nofollow" %></li>
+            <li><%= link_to 'Password'           , settings_password_path      , :rel => "nofollow" %></li>
+            <li><%= link_to 'Notification Center', settings_notifications_path, :rel => "nofollow" %></li>
+            <li><%= link_to 'Privacy'            , settings_privacy_path , :rel => "nofollow" %></li>
+            <li><%= link_to 'API Key'            , settings_api_path     , :rel => "nofollow" %></li>
+            <li><%= link_to 'License Whitelists'  , settings_license_whitelists_path,   :rel => "nofollow" %></li>
+            <li><%= link_to 'Component Whitelists', settings_component_whitelists_path, :rel => "nofollow" %></li>
+            <li><%= link_to 'users'              , users_path, :rel => "nofollow" %></li>
+            <hr/>
+            <li><%= link_to 'Maven Repository'   , settings_mvnrepos_path , :rel => "nofollow" %></li>
+            <li><%= link_to 'Satis Repository'   , settings_satis_path    , :rel => "nofollow" %></li>
+            <li><%= link_to 'CocoaPods Specs'    , settings_cocoapods_path, :rel => "nofollow" %></li>
+            <hr/>
+            <li><%= link_to 'GitHub Settings'    , settings_githubsettings_path   , :rel => "nofollow" %></li>
+            <li><%= link_to 'Bitbucket Settings' , settings_bitbucketsettings_path, :rel => "nofollow" %></li>
+            <li><%= link_to 'Stash Settings'     , settings_stashsettings_path    , :rel => "nofollow" %></li>
+            <hr/>
+            <li><%= link_to 'Scheduler'          , settings_scheduler_path, :rel => "nofollow" %></li>
+          <% else %>
+            <li><%= link_to 'Profile'            , settings_profile_path, :rel => "nofollow" %></li>
+            <li><%= link_to 'Links'              , settings_links_path  , :rel => "nofollow" %></li>
+            <li><%= link_to 'E-Mails'            , settings_emails_path , :rel => "nofollow" %></li>
 
-    <li><%= link_to 'Connect'            , settings_connect_path , :rel => "nofollow" %></li>
-    <li><%= link_to 'Password'           , settings_password_path, :rel => "nofollow" %></li>
-    <li><%= link_to 'Notification Center', settings_notifications_path, :rel => "nofollow" %></li>
-    <li><%= link_to 'Privacy'            , settings_privacy_path , :rel => "nofollow" %></li>
-    <li><%= link_to 'API Key'            , settings_api_path     , :rel => "nofollow" %></li>
-    <li><%= link_to 'Delete'             , settings_delete_path  , :rel => "nofollow" %></li>
-  <% end %>
+            <% if !Rails.env.enterprise? %>
+              <li><%= link_to 'Plans & Pricing'    , settings_plans_path   , :rel => "nofollow" %></li>
+              <li><%= link_to 'Payment History'    , settings_payments_path, :rel => "nofollow" %></li>
+              <li><%= link_to 'Billing Address'    , settings_billing_path , :rel => "nofollow" %></li>
+            <% end %>
 
-</ul>
+            <% if !Rails.env.enterprise? || current_user.fetch_or_create_permissions.lwl == true %>
+              <li><%= link_to 'License Whitelists'  , settings_license_whitelists_path,   :rel => "nofollow" %></li>
+              <li><%= link_to 'Component Whitelists', settings_component_whitelists_path, :rel => "nofollow" %></li>
+            <% end %>
+
+            <li><%= link_to 'Connect'            , settings_connect_path , :rel => "nofollow" %></li>
+            <li><%= link_to 'Password'           , settings_password_path, :rel => "nofollow" %></li>
+            <li><%= link_to 'Notification Center', settings_notifications_path, :rel => "nofollow" %></li>
+            <li><%= link_to 'Privacy'            , settings_privacy_path , :rel => "nofollow" %></li>
+            <li><%= link_to 'API Key'            , settings_api_path     , :rel => "nofollow" %></li>
+            <li><%= link_to 'Delete'             , settings_delete_path  , :rel => "nofollow" %></li>
+          <% end %>
+
+        </ul>
+
+    </div>
+
+</div>
