--- a/app/views/user/helpers/_navi.html.erb
+++ b/app/views/user/helpers/_navi.html.erb
@@ -1,27 +1,46 @@
-<div class="navi nav-tabs nav-stacked"  >
-  <% if signed_in? %>
-  <ul class = "nav nav-pills nav-stacked">
-    <li><%= link_to 'My Projects', user_projects_path, id: 'my_projects', :rel => "nofollow" %></li>
+<div class="navbar navbar-default" >
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#settings_menu" aria-expanded="false">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+  </div>
 
-    <% if Rails.env.enterprise? %>
-      <li><%= link_to 'All Public Projects', user_projects_path(:all_public => true), id: 'all_public_projects', :rel => "nofollow" %></li>  
-    <% end %> 
+  <div class="collapse navbar-collapse" id="settings_menu">
 
-    <li><%= link_to 'Shared with me', user_collaborations_path, :rel => "nofollow" %></li>
-    <li><hr/></li>
-    <% if github_enabled? %>
-      <li><%= link_to 'Create From GitHub', user_projects_github_repositories_path, :rel => "nofollow" %></li>
-    <% end %>
-    <% if bitbucket_enabled? %>
-      <li><%= link_to 'Create From Bitbucket', user_projects_bitbucket_repositories_path, :rel => "nofollow" %></li>
-    <% end %>
-    <% if stash_enabled? %>
-      <li><%= link_to 'Create From Stash', user_projects_stash_repositories_path, :rel => "nofollow" %></li>
-    <% end %>
-    <li><%= link_to 'Create From URL', new_user_project_path, :rel => "nofollow" %></li>
-    <li><%= link_to 'Create From Upload', user_prjects_upload_path, :rel => "nofollow" %></li>
-</ul>
-  <% else %>
-    <%= render '/shared/github_ad' %>
-  <% end %>
+    <div class="navi nav-stacked"  >
+      <% if signed_in? %>
+      <ul class = "nav nav-pills nav-stacked">
+        <li><%= link_to 'My Projects', user_projects_path, id: 'my_projects', :rel => "nofollow" %></li>
+
+        <% if Rails.env.enterprise? %>
+          <li><%= link_to 'All Public Projects', user_projects_path(:all_public => true), id: 'all_public_projects', :rel => "nofollow" %></li>
+        <% end %>
+
+        <li><%= link_to 'Shared with me', user_collaborations_path, :rel => "nofollow" %></li>
+        <li><hr/></li>
+        <% if github_enabled? %>
+          <li><%= link_to 'Create From GitHub', user_projects_github_repositories_path, :rel => "nofollow" %></li>
+        <% end %>
+        <% if bitbucket_enabled? %>
+          <li><%= link_to 'Create From Bitbucket', user_projects_bitbucket_repositories_path, :rel => "nofollow" %></li>
+        <% end %>
+        <% if stash_enabled? %>
+          <li><%= link_to 'Create From Stash', user_projects_stash_repositories_path, :rel => "nofollow" %></li>
+        <% end %>
+        <li><%= link_to 'Create From URL', new_user_project_path, :rel => "nofollow" %></li>
+        <li><%= link_to 'Create From Upload', user_prjects_upload_path, :rel => "nofollow" %></li>
+      </ul>
+      <% else %>
+        <%= render '/shared/github_ad' %>
+      <% end %>
+    </div>
+
+
+  </div>
+
 </div>
+
+
