Add LDAP support.

--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -36,6 +36,7 @@
             <li><%= link_to 'GitHub Settings'    , settings_githubsettings_path   , :rel => "nofollow" %></li>
             <li><%= link_to 'Bitbucket Settings' , settings_bitbucketsettings_path, :rel => "nofollow" %></li>
             <li><%= link_to 'Stash Settings'     , settings_stashsettings_path    , :rel => "nofollow" %></li>
+            <li><%= link_to 'LDAP Settings'      , settings_ldapsettings_path     , :rel => "nofollow" %></li>
             <hr/>
             <li><%= link_to 'Scheduler'          , settings_scheduler_path, :rel => "nofollow" %></li>
           <% else %>
