--- a/app/views/products/helpers/_product_show_keywords.html.erb
+++ b/app/views/products/helpers/_product_show_keywords.html.erb
@@ -1,4 +1,4 @@
-<% if @product.tags && !@product.tags.empty? %>
+<% if @product.tags && @product.tags.is_a?(Array) && !@product.tags.empty? %>
 
   <h2 class="section_header"> Keywords </h2>
 
@@ -6,7 +6,7 @@
     <p>
       <% @product.tags.each do |tag| %>
         <span class="label label-default keyword_tag"><%= link_to tag, keyword_path(tag) %></span>
-      <% end %> 
+      <% end %>
     </p>
   </div>
 
