--- a/app/views/shared/_features.html.erb
+++ b/app/views/shared/_features.html.erb
@@ -14,7 +14,7 @@
       software projects. Nowadays software projects are based on many
       open source and self developed components. Checking manually
       for updates for these components is a very time consuming task and not fun at all!
-      VersionEye notifies software developers via email about outdated
+      VersionEye notifies software developers about outdated
       dependencies in their projects. That way they can save a lot of
       time and focus on development.<br/>
       <br/>
