Show anchor links.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,4 +1,13 @@
 
+.octicon-link{
+  font-size: 12px;
+  color: gray;
+}
+
+.octicon-link:hover {
+  color: black;
+}
+
 .dependency_table{
   width: 100%;
 }
