--- a/app/views/products/_product_show_dependencies.html.erb
+++ b/app/views/products/_product_show_dependencies.html.erb
@@ -1,5 +1,7 @@
 
-<h2 class="section_header"> Dependencies </h2>
+<h2 class="section_header">
+  Dependencies <a class="octicon-link" href="#dependencies"><i class="fa fa-link"></i></a>
+</h2>
 
 <div class="boxContainer" style="margin-bottom: 30px;" id="dependencies" >
   <%
