--- a/app/views/products/_product_show_description.html.erb
+++ b/app/views/products/_product_show_description.html.erb
@@ -1,6 +1,8 @@
 <% if (@product.description && !@product.description.empty?) || (@product.description_manual && !@product.description_manual.empty?) %>
 
-  <h2 class="section_header"> Description </h2>
+  <h2 class="section_header">
+    Description <a class="octicon-link" href="#description"><i class="fa fa-link"></i></a>
+  </h2>
 
   <div style="margin-bottom: 20px;" >
     <p>
