--- a/app/views/products/_product_show_maven_code_snippet.html.erb
+++ b/app/views/products/_product_show_maven_code_snippet.html.erb
@@ -1,5 +1,7 @@
 
-<h2 class="section_header">Maven</h2>
+<h2 class="section_header">
+  Maven <a class="octicon-link" href="#code_snippet"><i class="fa fa-link"></i></a>
+</h2>
 <div class = "well" >
 
   <% if @product.group_id_original && @product.artifact_id_original %>
