--- a/app/views/products/helpers/_kpi_summary.html.erb
+++ b/app/views/products/helpers/_kpi_summary.html.erb
@@ -1,4 +1,6 @@
-<h2 class="section_header"> Summary </h2>
+<h2 class="section_header">
+  Summary <a class="octicon-link" href="#summary"><i class="fa fa-link"></i></a>
+</h2>
 
 <div class="" style="margin-bottom: 20px;" >
   <% if @product.used_by_count == 0 %>
