--- a/app/views/products/_product_show_maven.html.erb
+++ b/app/views/products/_product_show_maven.html.erb
@@ -9,6 +9,7 @@
   <%= render 'products/helpers/product_show_keywords' %>
   <%= render 'products/product_show_dependencies' %>
   <%= render 'products/product_show_maven_code_snippet' %>
+  <%= render 'products/product_show_scm_changelogs' %>
   <%= render 'products/product_show_comments' %>
   <%= render 'products/product_show_comment' %>
 </div>
