Update Core and Tests.

--- a/app/views/pricing/index.html.erb
+++ b/app/views/pricing/index.html.erb
@@ -24,7 +24,7 @@
     <td>Free</td>
     <td>€ 0/Month</td>
     <td>1</td>
-    <td><%= render :partial => 'plan', :locals => { :plan_id => '03_trial_0' } %></td>
+    <td><%= render :partial => 'plan', :locals => { :plan_id => '04_free' } %></td>
   </tr>
   <tr>
     <td>Micro</td>
