Add affiliate for getDigital.

--- a/app/views/products/_product_show_npm.html.erb
+++ b/app/views/products/_product_show_npm.html.erb
@@ -10,6 +10,7 @@
   <%= render 'products/helpers/npm_snippet' %>
   <%= render 'products/product_show_comments' %>
   <%= render 'products/product_show_comment' %>
+  <%= render 'shared/affiliate/index' %>
 </div>
 
 <div class="col-md-3 col-sm-4 pull-right sidebar content_head_top" >
@@ -19,4 +20,5 @@
   <%= render 'products/product_show_followers' %>
   <%= render 'products/product_show_links' %>
   <%= render 'products/product_show_twitter_follow' %>
+  <%= render 'shared/affiliate/index' %>
 </div>
