--- a/app/views/products/_product_show_packagist.html.erb
+++ b/app/views/products/_product_show_packagist.html.erb
@@ -12,6 +12,7 @@
   <%= render 'products/helpers/composer_snippet' %>
   <%= render 'products/product_show_comments' %>
   <%= render 'products/product_show_comment' %>
+  <%= render 'shared/affiliate/index' %>
 </div>
 
 <div class="col-md-3 col-sm-4 pull-right sidebar content_head_top" >
@@ -20,4 +21,5 @@
   <%= render 'products/product_show_authors' %>
   <%= render 'products/product_show_followers' %>
   <%= render 'products/product_show_links' %>
+  <%= render 'shared/affiliate/index' %>
 </div>
